# COREFL-CPC

./: .gitignore  CMakeLists.txt  readme.md
docs/: two_temperature_weno_characteristic_derivation.md
example/doubleWedge2019/: README.md  generate_mesh.py  watchdog_restart.py
example/doubleWedge2019/input/: doubleWedge2019.inp  grid_allocate_info.txt  mesh_summary.txt  setup_before_cfl_debug.txt  setup_before_timeseries_header_test.txt  setup_full_adiabatic_dt1e-10.txt  setup_full_dt1e-10.txt  setup_full_dt1e-9.txt  setup_quiescent_dt8e-11_short100_tested.txt  setup_quiescent_full_dt1e-9.txt  setup_quiescent_full_dt8e-11.txt  setup_short_adiabatic_dt1e-10.txt  setup_short_dt1e-10.txt  setup_short_dt1e-11.txt  setup_short_dt1e-11_100.txt  setup_short_dt1e-9.txt
example/doubleWedge2019/input/boundary_condition/: boundary   0.txt  boundary   1.txt  inner   0.txt  inner   1.txt  parallel   0.txt  parallel   1.txt
example/squareCylinder2D_M10_air5_dns/: analyze_shock.py  generate_mesh.py  run_2t.sh
example/squareCylinder2D_M10_air5_dns/input/: grid_allocate_info.txt  mesh_summary.txt  setup_2t.txt  setup_2t_visc8.txt  squareCylinder.inp
example/squareCylinder2D_M10_air5_dns/input/boundary_condition/: boundary   0.txt  inner   0.txt  parallel   0.txt
example/squareCylinder2D_M10_air5_dns/input/chemistry/: air5_park.inp
src/: BoundCond.cpp  BoundCond.cu  BoundCond.h  CMakeLists.txt  ChemData.cpp  ChemData.h  ConstVolumeReactor.cpp  ConstVolumeReactor.h  DParameter.cu  DParameter.cuh  DataCommunication.cu  Define.h  Driver.cu  Field.cu  Field.h  FieldIO.h  FieldOperation.cu  FieldOperation.cuh  FiniteRateChem.cu  FiniteRateChem.cuh  IOManager.h  Initialize.cu  InviscidScheme.cu  Parameter.cpp  Parameter.h  PostProcess.cu  PostProcess.h  RK.cuh  SteadySim.cuh  StrangSplitting.cu  Thermo.cu  Thermo.cuh  TimeAdvanceFunc.cu  TimeAdvanceFunc.cuh  ViscousScheme.cu  WENO.cu  main.cu
tools/: read_grid.py
